[gd_scene load_steps=4 format=3 uid="uid://btm0j23u6n42s"]

[ext_resource type="Script" uid="uid://cj0784cml5lvr" path="res://boids/scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://dlgbmnlgs680t" path="res://boids/scenes/boid.tscn" id="2_jyhfs"]
[ext_resource type="Script" uid="uid://bkncfunfqvyi0" path="res://boids/ui/SliderManager.gd" id="3_tbgi4"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_sugp2")
boidScene = ExtResource("2_jyhfs")

[node name="Walls" type="Node2D" parent="."]

[node name="Boids" type="Node2D" parent="."]

[node name="del_boids" type="Button" parent="."]
offset_top = 778.0
offset_right = 137.0
offset_bottom = 809.0
text = "Supprimer Boids"

[node name="del_walls" type="Button" parent="."]
offset_top = 821.0
offset_right = 134.0
offset_bottom = 852.0
text = "Supprimer Murs"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 16.0
offset_top = 12.0
offset_right = 147.0
offset_bottom = 243.0
script = ExtResource("3_tbgi4")

[node name="Separation" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Name" type="Label" parent="VBoxContainer/Separation"]
layout_mode = 2
text = "Separation"

[node name="Value" type="Label" parent="VBoxContainer/Separation"]
layout_mode = 2
text = "5"

[node name="SepSlide" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 8.0
step = 0.1
value = 3.0

[node name="Alignement" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Name" type="Label" parent="VBoxContainer/Alignement"]
layout_mode = 2
text = "Alignement"

[node name="Value" type="Label" parent="VBoxContainer/Alignement"]
layout_mode = 2
text = "5"

[node name="AliSlide" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 8.0
step = 0.1
value = 1.0

[node name="Cohesion" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Name" type="Label" parent="VBoxContainer/Cohesion"]
layout_mode = 2
text = "Cohesion"

[node name="Value" type="Label" parent="VBoxContainer/Cohesion"]
layout_mode = 2
text = "5"

[node name="CohSlide" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 8.0
step = 0.1
value = 1.5

[node name="Mouse" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Name" type="Label" parent="VBoxContainer/Mouse"]
layout_mode = 2
text = "Suivre Souris"

[node name="Value" type="Label" parent="VBoxContainer/Mouse"]
layout_mode = 2
text = "5"

[node name="MouseSlide" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 8.0
step = 0.1
value = 3.0

[node name="Wall" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Name" type="Label" parent="VBoxContainer/Wall"]
layout_mode = 2
text = "Eviter murs"

[node name="Value" type="Label" parent="VBoxContainer/Wall"]
layout_mode = 2
text = "5"

[node name="WallSlide" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 8.0
step = 0.1
value = 6.0

[connection signal="pressed" from="del_boids" to="." method="_on_del_boids_pressed"]
[connection signal="pressed" from="del_walls" to="." method="_on_del_walls_pressed"]
[connection signal="value_changed" from="VBoxContainer/SepSlide" to="VBoxContainer" method="_on_sep_slide_value_changed"]
[connection signal="value_changed" from="VBoxContainer/AliSlide" to="VBoxContainer" method="_on_ali_slide_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CohSlide" to="VBoxContainer" method="_on_coh_slide_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MouseSlide" to="VBoxContainer" method="_on_mouse_slide_value_changed"]
[connection signal="value_changed" from="VBoxContainer/WallSlide" to="VBoxContainer" method="_on_wall_slide_value_changed"]
